--- a/portfolio.html
+++ b/portfolio.html
@@ -17,35 +17,37 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="page-header">
-      <div class="container header-content">
-        <nav class="header-navigation">
+      <div class="container page-header__content">
+        <nav class="page-header__navigation">
           <a href="./index.html" class="logo logo-header logo-navigation"
             >Web<span class="logo-color-studio">Studio</span></a
           >
           <ul class="site-nav">
-            <li class="header-link-nav">
-              <a class="header-link line-effects" href="./">Студия</a>
+            <li class="site-nav__link">
+              <a class="page-link page-link__line" href="./">Студия</a>
             </li>
-            <li class="header-link-nav">
+            <li class="site-nav__link">
               <a
-                class="header-link link-active line-effects"
+                class="page-link page-link__active page-link__line"
                 href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="header-link-nav">
-              <a class="header-link line-effects" href="">Контакты</a>
+            <li class="site-nav__link">
+              <a class="page-link page-link__line" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li class="header-link-contacts">
-            <a class="header-link link-contacs" href="mailto:info@devstudio.com"
-              ><span class="icon-maile">
+          <li class="auth-nav__contacts">
+            <a
+              class="page-link page-link__contacs"
+              href="mailto:info@devstudio.com"
+              ><span class="page-link__icon">
                 <svg width="16" height="12">
                   <use href="./images/icons/symbol-defs.svg#icon-mesedge"></use>
                 </svg>
@@ -53,9 +55,9 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="header-link-contacts">
-            <a class="header-link link-contacs" href="tel:+380961111111">
-              <span class="icon-maile">
+          <li class="auth-nav__contacts">
+            <a class="page-link page-link__contacs" href="tel:+380961111111">
+              <span class="page-link__icon">
                 <svg width="10" height="16">
                   <use
                     href="./images/icons/symbol-defs.svg#icon-smartphone"
@@ -344,7 +346,7 @@
             <ul>
               <li class="footer-address-link">
                 <a
-                  class="company-address-link a-c-hover-focus"
+                  class="company-address-link hover-focus"
                   href="https://goo.gl/maps/QHeTT9nwSXY6Y2y69"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -353,15 +355,13 @@
               </li>
               <li class="footer-address-link">
                 <a
-                  class="company-contacts a-c-hover-focus"
+                  class="company-contacts hover-focus"
                   href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
               <li class="footer-address-link">
-                <a
-                  class="company-contacts a-c-hover-focus"
-                  href="tel:+380991111111"
+                <a class="company-contacts hover-focus" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
